# krea2_alis_mlx

./: .gitignore  README.md  api.py  app.py  generate.py  krea2-ui-mockup.html  pyproject.toml  requirements.txt  start-API.sh
.github/workflows/: ci.yml
docs/: SESSION_REPORT_2026-07-02.md
krea2/: lora.py  pipeline.py  safety.py  sampling.py  service.py  text_encoder.py  transformer.py
scripts/: check_lora_compat.py  prefetch_weights.py
validation/: README.md  test_depth_control.py  test_input_validation.py  test_lora_compat_script.py  test_lora_fuse.py
