[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "krea2-alis-mlx"
version = "0.2.0"
description = "Krea-2-Turbo (12.9B text-to-image MMDiT) ported to Apple MLX — pure-MLX, numerically verified faithful to PyTorch. txt2img + img2img."
readme = "README.md"
requires-python = ">=3.10"            # uses PEP 604 `str | None` annotations at runtime
license = { text = "Krea 2 Community License" }
authors = [{ name = "avlp12" }]
keywords = ["mlx", "apple-silicon", "text-to-image", "diffusion", "mmdit", "flow-matching", "krea"]
classifiers = [
    "Environment :: GPU",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx>=0.31,<0.32",
    "mflux>=0.18,<0.19",          # Qwen-Image VAE + weight loaders
    "transformers>=5.0,<6",       # Qwen3-VL-4B tokenizer / encoder (its support landed in 5.0)
    "huggingface_hub>=0.26,<2",   # <2: mflux 0.18 requires hub>=1.1.6; the old <1 cap was contradictory
    "requests>=2.28,<3",
    "numpy>=1.24,<3",
    "pillow>=10,<13",             # <13: mflux 0.18 requires pillow>=12.1.1; the old <12 cap was contradictory
]

[project.optional-dependencies]
ui = ["gradio>=5,<7"]                                    # web UI (app.py)
validation = ["torch>=2.8", "diffusers", "einops", "accelerate"]  # PyTorch-parity harness

[project.urls]
Homepage = "https://github.com/avlp12/krea2_alis_mlx"
"Model — 8-bit" = "https://huggingface.co/avlp12/Krea-2-Turbo-Alis-MLX-8bit"
"Model — mixed-4/8" = "https://huggingface.co/avlp12/Krea-2-Turbo-Alis-MLX-mixed-4-8"
"Base model" = "https://huggingface.co/krea/Krea-2-Turbo"

[tool.setuptools]
packages = ["krea2"]       # ship the package; app.py / generate.py are run as scripts, not installed
py-modules = []

[tool.ruff]
line-length = 140
extend-exclude = ["validation"]   # research harness — held to a looser bar than shipped code

[tool.ruff.lint]
select = ["F", "E9"]       # pyflakes (undefined names, unused imports) + syntax errors; no style churn
